tests/reference/asr-test_bitwise_on_complex-dd9568b.stderr
semantic error: Unsupported binary operation on complex: '|'
 --> tests/errors/test_bitwise_on_complex.py:8:11
  |
8 |     print(c1 | c2)
  |           ^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
